--- a/style.css
+++ b/style.css
@@ -57,6 +57,38 @@ body{
     display: flex;
     justify-content: space-evenly;
 }
+#whatsappLogo{
+    position: fixed;
+    bottom: 30px;
+    right: -100%;
+    transition: .6s;
+    width: 100%;
+    height: 80px;
+    width: 80px;
+    z-index: 300;  
+    cursor: pointer;
+} 
+#whatsappLogo:hover{
+    transform: scale(1.05);
+}
+ #whatsappLogo.show{
+    right: 50px; 
+} 
+@media (max-width: 1000px){
+    #whatsappLogo{
+        height: 50px;
+        width: 50px;
+    }
+}
+@media (max-width: 710px){
+    #whatsappLogo.show{
+        right:20px ;
+    }
+    #whatsappLogo{
+        height: 40px;
+        width: 40px;
+    }
+}
 #backBone>*{
     opacity: .2;
     background-color: #a4acc4 ;
@@ -134,7 +166,6 @@ section#intro{
 }
 
 .videoIntro{
-    filter:hue-rotate(90deg);
     position: absolute;
     top: 0;
     bottom: 0;
@@ -142,7 +173,6 @@ section#intro{
     height: 100%;
 object-fit: cover;
 width: 100%;
-
 }
 
 #intro{
